--- a/style.css
+++ b/style.css
@@ -406,7 +406,7 @@ header p {
   height: 100%;
   position: relative;
   transition: transform 1s;
-  transform-style: preserve-3d;
+  -webkit-transform-style: preserve-3d;
 }
 
 /* Flip on hover */
