--- a/style.css
+++ b/style.css
@@ -405,7 +405,7 @@ header p {
   width: 100%;
   height: 100%;
   position: relative;
-  transition: transform 0.8s ease-in-out;
+  transition: transform 1s;
   -webkit-transform-style: preserve-3d;
 }
 
