--- a/style.css
+++ b/style.css
@@ -405,13 +405,17 @@ header p {
   width: 100%;
   height: 100%;
   position: relative;
-  transition: transform 1s;
+  transform-style: preserve-3d;
   -webkit-transform-style: preserve-3d;
+  transition: transform 0.8s;
+  -webkit-transition: -webkit-transform 0.8s;
 }
 
 /* Flip on hover */
 .card:hover .card-inner {
   transform: rotateY(180deg);
+  -webkit-transform: rotateY(180deg);
+
 }
 
 /* Front & Back face */
@@ -421,6 +425,7 @@ header p {
   height: 100%;
   border-radius: 10px;
   backface-visibility: hidden;
+  -webkit-backface-visibility: hidden;
   display: flex;
   align-items: center;
   justify-content: center;
@@ -437,8 +442,9 @@ header p {
   height: 100%;
   border-radius: 10px;
   backface-visibility: hidden;
+  -webkit-backface-visibility: hidden;
   display: flex;
-  
+  transform: rotateY(180deg);
   justify-content: center;
   font-family: 'Share Tech Mono', monospace;
   font-size: 2.2rem;
@@ -460,6 +466,7 @@ header p {
   color: #00ff41;
   text-shadow: 0 0 8px #00ff41;
   transform: rotateY(180deg);
+  -webkit-transform: rotateY(180deg);
   box-shadow: inset 0 0 20px rgba(0, 255, 0, 0.5);
 }
 
