--- a/style.css
+++ b/style.css
@@ -397,7 +397,7 @@ header p {
 .card {
   width: 55%;
   height: 800px;
-  position: relative;
+  perspective: 1200px;
 }
 
 /* Inner card wrapper for flip effect */
